# polytruth

./: .gitignore  README.md  data.logic  main.py  pyproject.toml
src/polytruth/: __init__.py  core.py
src/polytruth/operators/: __init__.py  combination.py  drastic.py  godel.py  kleene.py  lukasiewicz.py  multi_value.py  nilpotent.py  product.py  sugeno.py  yager.py
