[project]
name = "polytruth"
version = "0.1.0"
description = " Multi-valued Logic Truth Value Computation Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20.0", "ply>=3"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = [
    "multi-valued logic", 
    "fuzzy logic", 
    "truth values", 
    "non-classical logic",
    "logical operators"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
